package yowyob.comops.api.hrm.domain.model;

public enum TrainingStatus {
    PLANNED,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}
