package yowyob.comops.api.hrm.domain.model;

public enum ReviewStatus {
    DRAFT,
    IN_PROGRESS,
    COMPLETED,
    CANCELLED
}
